Fixed new bar overlapping other crap.

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -216,13 +216,16 @@ li.item_for_node {
 	line-height: 16px;
 	height: 16px;
 	/*width: 16px;*/
-	float: left;
 }
 
 .bar {
 	position: relative;
 	z-index: 1;
 }
+
+.stub { float: left; }
+
+.action.bar { float: left; }
 
 .action.stub .widget,
  #action-bar .widget,
@@ -244,10 +247,10 @@ li.item_for_node {
 #action-bar .buttons, #action-bar .buttons a { color: #fff; }
 #action-bar .buttons a {}
 #action-bar .buttons a:hover {
-	text-shadow:	0 2px	3px rgba(0, 0, 0, 1),
-					0 -2px	3px rgba(0, 0, 0, 1),
-					2px 0	3px rgba(0, 0, 0, 1),
-					-2px 0	3px rgba(0, 0, 0, 1);
+	text-shadow:	0 2px	3px rgba(0, 0, 0, 0.5),
+					0 -2px	3px rgba(0, 0, 0, 0.5),
+					2px 0	3px rgba(0, 0, 0, 0.5),
+					-2px 0	3px rgba(0, 0, 0, 0.5);
 }
 
 #new-bar .buttons {
